fix(index.css): wrong color values
- swap inactive red and green

--- a/geode-cracker/src/index.css
+++ b/geode-cracker/src/index.css
@@ -5,8 +5,8 @@
   --naturalis-red-color: #F93F35;
   --naturalis-green-color: #489F58;
   --error-color: #FA6B00;
-  --inactive-red-color: #A5D7B9;
-  --inactive-green-color: #B96560;
+  --inactive-red-color: #B96560;
+  --inactive-green-color: #A5D7B9;
   --white-color: #FFFFFF;
   --black-color: #000000;
 }
